<resources>
    <string name="app_name">SampleApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="balance_value">۹۹۹,۷۷۷,۰۰۰ ریال</string><!--"۰", "۱", "۲", "۳", "۴", "۵", "۶", "۷", "۸", "۹"-->
    <string name="balance_title">موجودی</string>
    <string name="title_toolbar">خانه</string>
    <string name="charge_account">شارژ حساب</string>
    <string name="txt_box">باکس</string>
    <string name="finance_managment">مدیریت مالی</string>
</resources>